checker/tests/output/core/ill-typed/extra-tests/unexpected_number_of_parameters_in_lambda/test-2.stella
ERROR_UNEXPECTED_NUMBER_OF_PARAMETERS_IN_LAMBDA
